April Updated Final Parts

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
@@ -2305,7 +2305,7 @@
 
  #2.6 Update 2 - Balance and New Hive Infestions
  #Odds and Ends
- decision_eco_arcology_project_requirements:0 ""£ trigger_no£ §RA11 espaços de distrito no planeta devem ser preenchidos apenas com§! §Y$district_city_plural$§!."
+ decision_eco_arcology_project_requirements:0 "£ trigger_no£ §RA11 espaços de distrito no planeta devem ser preenchidos apenas com§! §Y$district_city_plural$§!."
  decision_eco_arcology_project_effects:0 "Transforma o planeta em um §Y$pc_ecocity$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! e desbloqueio especial £district£ §YArcology Districts§! às custas dos recursos naturais do planeta tornando-se §Rinaccessible§!, impedindo toda construção futura de £district£ §YGenerator§!, §YMining§! e §YAgriculture Districts§!."
  district_archive_science_plural:0 "Distritos Aquivo Científicos"
  district_archive_energy_plural:0 "Distritos Arquivo Energéticos"
@@ -2880,7 +2880,7 @@
  d_biolumen_shores_deposit:0 "Margens Bioluminescentes"
  d_biolumen_shores_deposit_desc:0 "Devido ao plâncton ou outra fauna costeira, este mundo tem costas muito brilhantes em grande parte do ano."
  d_large_lihtium_deposit:0 "Grandes Depósitos de Lítio"
- d_large_lihtium_deposit_desc:0 "A densidade de lítio do planeta mais alta do que o normal permite em uma mineração constante neste mundo. ""
+ d_large_lihtium_deposit_desc:0 "A densidade de lítio do planeta mais alta do que o normal permite em uma mineração constante neste mundo. "
  d_powerful_auroras_deposit:0 "Auroras Poderosas"
  d_powerful_auroras_deposit_desc:0 "Devido às variações na magnetosfera deste planeta, grande parte deste mundo vê auroras brilhantes no céu à noite."
  d_underwater_ruins_deposit:0 "Ruínas Subaquáticas"
@@ -3279,7 +3279,7 @@
  decision_milarcology_project_desc:1 "Ao utilizar este planeta para uso militar, podemos melhorar muito nossos sistemas de apoio militar."
  decision_milarcology_project_effects:1 "Transforma o planeta em um §Y$pc_milarc$§!, aumentando a defesa do planeta e o treinamento militar e desbloqueando especial £district£ §YArcology Districts§!, impedindo toda construção futura de £district£ §YGenerator§!, §YMining§! e §YAgriculture Districts§!."
  decision_milarcology_project_effects_short:2 "Aumento £housing£ §Y$PLANET_HOUSING_TITLE$§!,\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
- decision_mil_arcology_project_requirements:0 ""£trigger_no£ §R5§! to §R10§! espaços distritais no planeta devem ser preenchidos com §! §Y$district_city_plural$§!, e nenhum outro tipo de distrito e deve haver §R5§! vagas distritais abertas."
+ decision_mil_arcology_project_requirements:0 "£trigger_no£ §R5§! to §R10§! espaços distritais no planeta devem ser preenchidos com §! §Y$district_city_plural$§!, e nenhum outro tipo de distrito e deve haver §R5§! vagas distritais abertas."
  d_milarc:0 "Zona de Teste Militar"
  d_milarc_desc:0 "Esta grande zona ocupa uma parte considerável da superfície do planeta e é focada no treinamento de soldados de elite e no teste de novas tecnologias de armas."
  job_naval_admin_hive:0 "Drone de Logística Naval"
@@ -5154,7 +5154,7 @@
  building_techno_canal:0 "Sistema Techno-Canal"
  building_techno_canal_desc:0 "Este avançado sistema de canais, baseado no Mundo Tecno-orgânico, é uma maravilha da engenharia que melhora muito a produção de alimentos em qualquer mundo."
  building_techno_synth_workshop:0 "Synthetic Cauldron"
- building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the sythetic lifeforms found on the Techno-Organic World."
+ building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the synthetic lifeforms found on the Techno-Organic World."
  edict_pd_techno_lm_shiprepair:0 "Reparação de Naves de Metal Vivo"
  edict_pd_techno_lm_shiprepair_desc:0 "Aplicar Metal Vivo nos cascos de nossas naves permite uma regeneração limitada do casco."
  edict_pd_techno_lm_shipbuild:0 "Construção de Navios de Metal Vivo"
@@ -5732,7 +5732,7 @@
  pc_hivetidallylocked:0 "Hive World"
  pc_hivetidallylocked_desc:0 "This entire world is a giant living organism, psionically connected with the Hive Mind that shaped it. Any beings not part of the Hive that set foot here will be attacked by the very terrain itself."
  pc_hivetidallylocked_adj:0 "hive"
- mod_pc_hivetidallylocked_habitability:0 "Hive World Habitability""
+ mod_pc_hivetidallylocked_habitability:0 "Hive World Habitability"
  trait_pc_hivetidallylocked_preference:0 "Hive World Preference"
  trait_pc_hivetidallylocked_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  pc_tidallyshroud:0 "Shroud World"
@@ -6592,7 +6592,7 @@
  trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds and Ends
- TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"" 
+ TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$" 
  buildable_robot_pop_2_gardeners: "Gardeners"
  buildable_robot_pop_2_gardeners_desc: "The servant droids of a long dead race."
  NAME_Mushroom: "Mushroom"
@@ -6681,12 +6681,14 @@
 
  #Odds & Ends
  TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"
+
+ #Uninhabitable Modifiers
  pd_diamond:0 "Diamond World"
  pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
  pd_carbon:0 "Carbon World"
  pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
- pc_chthonian:0 "Chthonion World"
- pc_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
+ pd_chthonian:0 "Chthonion World"
+ pd_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
  pd_iron:0 "Iron World"
  pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
  pd_volcanic:0 "Volcanic World"
