--- a/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
@@ -626,7 +626,7 @@ biolumen:0 "Bioluminescence Planet"
 biolumen_desc:0 "The bioluminescence found in most of the plants and animals here are both intriguing to scientists and truly spectacular to be around."
 pc_biolumen_habitability:1 "Bioluminescence Habitability"
 trait_pc_biolumen_preference:0 "Bioluminescence World Preference"
-trait_pc_biolumen_preference_desc:1 "$trait_pc_arctic_preference_desc$""
+trait_pc_biolumen_preference_desc:1 "$trait_pc_arctic_preference_desc$"
 START_SCREEN_PART_ONE_BIOLUMEN:0 "In the eons since the first primitive [GetSpeciesName] communities took shape in the dense glowing jungles of [GetHomeWorldName], our civilization has spread and prospered."
 civic_biolumen_world:0 "Bioluminescence Home"
 civic_biolumen_world_desc:0 "The dominant species of this planet has evolved in the bioluminescent jungle of this unique world."
@@ -5145,7 +5145,7 @@ snowball_earth.11.name:0 "The First Thaw"
  building_techno_canal:0 "Techno-Canal System"
  building_techno_canal_desc:0 "This advanced canal system, based off the Techno-Organic World, is a marvel of engineering which greatly improves food output on any world."
  building_techno_synth_workshop:0 "Synthetic Cauldron"
- building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the sythetic lifeforms found on the Techno-Organic World."
+ building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the synthetic lifeforms found on the Techno-Organic World."
  edict_pd_techno_lm_shiprepair:0 "Living Metal Ship Repair"
  edict_pd_techno_lm_shiprepair_desc:0 "Applying Living Metal to the hulls of our ships allows for limited hull regeneration."
  edict_pd_techno_lm_shipbuild:0 "Living Metal Ship Construction"
@@ -5721,7 +5721,7 @@ snowball_earth.11.name:0 "The First Thaw"
  pc_hivetidallylocked:0 "Hive World"
  pc_hivetidallylocked_desc:0 "This entire world is a giant living organism, psionically connected with the Hive Mind that shaped it. Any beings not part of the Hive that set foot here will be attacked by the very terrain itself."
  pc_hivetidallylocked_adj:0 "hive"
- mod_pc_hivetidallylocked_habitability:0 "Hive World Habitability""
+ mod_pc_hivetidallylocked_habitability:0 "Hive World Habitability"
  trait_pc_hivetidallylocked_preference:0 "Hive World Preference"
  trait_pc_hivetidallylocked_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  pc_tidallyshroud:0 "Shroud World"
@@ -6581,7 +6581,7 @@ snowball_earth.11.name:0 "The First Thaw"
  trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds and Ends
- TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"" 
+ TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$" 
  buildable_robot_pop_2_gardeners: "Gardeners"
  buildable_robot_pop_2_gardeners_desc: "The servant droids of a long dead race."
  NAME_Mushroom: "Mushroom"
@@ -6669,7 +6669,29 @@ snowball_earth.11.name:0 "The First Thaw"
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds & Ends
- TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$" 
+
+ #Uninhabitable Modifiers
+ pd_diamond:0 "Diamond World"
+ pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
+ pd_carbon:0 "Carbon World"
+ pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
+ pd_chthonian:0 "Chthonion World"
+ pd_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
+ pd_iron:0 "Iron World"
+ pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
+ pd_volcanic:0 "Volcanic World"
+ pd_volcanic_desc:0 "High geological activity from the interior causes constant volcanic eruptions. Plumes of sulfur can get as tall as 500 km above the surface."
+ pd_hydrocarbon:0 "Hydrocarbon World"
+ pd_hydrocarbon_desc:0 "he dense opaque atmosphere of nitrogen, methane and ethane clouds. Liquid hydrocarbon lakes and seas can be found on this lifeless world."
+ pd_hot_gas_giant:0 "Hot Gas Giant World"
+ pd_hot_gas_giant_desc:0 "Temperatures of this gas giant are much higher than average which causes extreme weather patterns which can be exploited for energy and rare gas collection."
+ pd_cloudless_gas_giant:0 "Cloudless Gas Giant World"
+ pd_cloudless_gas_giant_desc:0 "Gaseous planet with an atmosphere that does not form global cloud cover, because it lacks suitable chemicals in the atmosphere to form clouds."
+ pd_cold_gas_giant:0 "Cold Gas Giant World"
+ pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
+ pd_ethane_ocean:0 "Ethane Ocean World"
+ pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
 
  
 
