--- a/planetary_diversity/localisation/spanish/planetarydiversity_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_l_spanish.yml
@@ -2838,7 +2838,7 @@ pdtechnoorganic.33.a:0 "Claramente algo te hizo cambiar de opinión."
  d_pdstorm_nice_desc:0 "Utilizando una combinación de tecnología de cancelación de sonido y ocultación visual, podemos estudiar a la bestia y transmitir sus actividades a nuestros ciudadanos."
  d_pdstorm_greedy:0 "Zona Repelida de Extracción de Gas"
  d_pdstorm_greedy_desc:0 "Utilizando una combinación de potentes campos sónicos y electromagnéticos, hemos creado con éxito una barrera protectora alrededor de las áreas más ricas en recursos del lecho marino."
- d_pdstorm_purge:0 ""Zona de extracción de recursos ricos"
+ d_pdstorm_purge:0 "Zona de extracción de recursos ricos"
  d_pdstorm_purge_desc:0 "Con la bestia desaparecida, ahora podemos concentrarnos en extraer el área rica en gas en la qué habitaba."
  TRAIT_STORM_PREFERENCE_EFFECT:0 "Habitabilidad Tormenta:$pd80$\nHabitabilidad Frío:$pd60$\nHabitabilidad Húmedo:$pd40$"
  d_storm_waters:0 "Aguas peligrosas"
@@ -5158,7 +5158,7 @@ snowball_earth.11.name:0 "El Primer Deshielo"
  building_techno_canal:0 "Sistema Tecno-Canal"
  building_techno_canal_desc:0 "Este avanzado sistema de canales, basado en el mundo Tecno-Orgánico, es una maravilla de la ingeniería que mejora enormemente la producción de alimentos en cualquier mundo."
  building_techno_synth_workshop:0 "Synthetic Cauldron"
- building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the sythetic lifeforms found on the Techno-Organic World."
+ building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the synthetic lifeforms found on the Techno-Organic World."
  edict_pd_techno_lm_shiprepair:0 "Reparación de Naves con Metal Viviente"
  edict_pd_techno_lm_shiprepair_desc:0 "La aplicación de Metal Viviente a los cascos de nuestras naves permite una regeneración limitada del casco."
  edict_pd_techno_lm_shipbuild:0 "Construcción de Naves con Metal Viviente"
@@ -6579,7 +6579,7 @@ snowball_earth.11.name:0 "El Primer Deshielo"
  trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds and Ends
- TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"" 
+ TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$" 
  buildable_robot_pop_2_gardeners: "Gardeners"
  buildable_robot_pop_2_gardeners_desc: "The servant droids of a long dead race."
  NAME_Mushroom: "Mushroom"
@@ -6667,6 +6667,28 @@ snowball_earth.11.name:0 "El Primer Deshielo"
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds & Ends
- TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$" 
+
+ #Uninhabitable Modifiers
+ pd_diamond:0 "Diamond World"
+ pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
+ pd_carbon:0 "Carbon World"
+ pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
+ pd_chthonian:0 "Chthonion World"
+ pd_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
+ pd_iron:0 "Iron World"
+ pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
+ pd_volcanic:0 "Volcanic World"
+ pd_volcanic_desc:0 "High geological activity from the interior causes constant volcanic eruptions. Plumes of sulfur can get as tall as 500 km above the surface."
+ pd_hydrocarbon:0 "Hydrocarbon World"
+ pd_hydrocarbon_desc:0 "he dense opaque atmosphere of nitrogen, methane and ethane clouds. Liquid hydrocarbon lakes and seas can be found on this lifeless world."
+ pd_hot_gas_giant:0 "Hot Gas Giant World"
+ pd_hot_gas_giant_desc:0 "Temperatures of this gas giant are much higher than average which causes extreme weather patterns which can be exploited for energy and rare gas collection."
+ pd_cloudless_gas_giant:0 "Cloudless Gas Giant World"
+ pd_cloudless_gas_giant_desc:0 "Gaseous planet with an atmosphere that does not form global cloud cover, because it lacks suitable chemicals in the atmosphere to form clouds."
+ pd_cold_gas_giant:0 "Cold Gas Giant World"
+ pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
+ pd_ethane_ocean:0 "Ethane Ocean World"
+ pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
  
 
