--- a/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
@@ -5119,7 +5119,7 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  building_techno_canal:0 "Système Techno-Canal"
  building_techno_canal_desc:0 "Ce système de canal avancé, basé sur le Monde Techno-Organique, est une merveille d'ingénierie qui améliore considérablement la production alimentaire sur n'importe quel monde."
  building_techno_synth_workshop:0 "Synthetic Cauldron"
- building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the sythetic lifeforms found on the Techno-Organic World."
+ building_techno_synth_workshop_desc:0 "These cauldrons study, and if desired create, the synthetic lifeforms found on the Techno-Organic World."
  edict_pd_techno_lm_shiprepair:0 "Réparation avec le métal vivant"
  edict_pd_techno_lm_shiprepair_desc:0 "L'application de métal vivant sur la coque de nos vaisseaux permet une régénération limitée de la coque."
  edict_pd_techno_lm_shipbuild:0 "Construction de navires en métal vivant"
@@ -6557,7 +6557,7 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds and Ends
- TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"" 
+ TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$" 
  buildable_robot_pop_2_gardeners: "Gardeners"
  buildable_robot_pop_2_gardeners_desc: "The servant droids of a long dead race."
  NAME_Mushroom: "Mushroom"
@@ -6645,7 +6645,29 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds & Ends
- TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$" 
+
+ #Uninhabitable Modifiers
+ pd_diamond:0 "Diamond World"
+ pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
+ pd_carbon:0 "Carbon World"
+ pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
+ pd_chthonian:0 "Chthonion World"
+ pd_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
+ pd_iron:0 "Iron World"
+ pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
+ pd_volcanic:0 "Volcanic World"
+ pd_volcanic_desc:0 "High geological activity from the interior causes constant volcanic eruptions. Plumes of sulfur can get as tall as 500 km above the surface."
+ pd_hydrocarbon:0 "Hydrocarbon World"
+ pd_hydrocarbon_desc:0 "he dense opaque atmosphere of nitrogen, methane and ethane clouds. Liquid hydrocarbon lakes and seas can be found on this lifeless world."
+ pd_hot_gas_giant:0 "Hot Gas Giant World"
+ pd_hot_gas_giant_desc:0 "Temperatures of this gas giant are much higher than average which causes extreme weather patterns which can be exploited for energy and rare gas collection."
+ pd_cloudless_gas_giant:0 "Cloudless Gas Giant World"
+ pd_cloudless_gas_giant_desc:0 "Gaseous planet with an atmosphere that does not form global cloud cover, because it lacks suitable chemicals in the atmosphere to form clouds."
+ pd_cold_gas_giant:0 "Cold Gas Giant World"
+ pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
+ pd_ethane_ocean:0 "Ethane Ocean World"
+ pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
 
  
 
