--- a/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
@@ -6643,6 +6643,8 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  mod_pc_pd_blue_warform_habitability:0 "Warform KB-14 Habitability"
  trait_pc_pd_blue_warform_preference:0 "Warform KB-14 Preference"
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pd_origin_init_warform_NAME: "Warform Factory System"
+ pd_origin_init_warform_DESC: "A starting system containing the Mobile Warform Factory."
 
  #Odds & Ends
  TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$" 
