--- a/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
@@ -6711,7 +6711,7 @@ snowball_earth.11.name:0 "The First Thaw"
  tech_pd_warform_cyber_lab_desc: "Using the MWF-14 world as a network hub, we should be able to create several cybernetic focus laboratories which will further our knowledge on relevant subjects and boost our robotic assembly speed."
  tech_pd_warform_transforming:0 "Warform Transformation"
  tech_pd_warform_transforming_desc:0 "The Warform Factory MFW-14 was once highly modular and transformable to meet the needs of its machine makers. We should be able to replicate this on the planet."
- TECH_PD_WARFORM_TRANSFORM_TITLE: "§HUnlocks Decisions:§! MWF-14 Trasform Decisions"
+ TECH_PD_WARFORM_TRANSFORM_TITLE: "§HUnlocks Decisions:§! MWF-14 Transform Decisions"
  TECH_PD_WARFORM_TRANSFORM_DESC: "The Mobile Warform Factory once could transform its districts to suit its needs, and we will be able to recreate that effect to some degree."
  warform_this_district_is_machine: "These districts are designed for machine interfaces and will require transformation to be able to use them."
  pd_machine_warform:0 "Machine Warform"
@@ -6737,6 +6737,8 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_pd_warform_transform_orange_warform:0 "Transform Auxiliary Function"
  decision_pd_warform_transform_orange_warform_desc:0 "We will transform the auxiliary functions of this Warform factory to be focused on its base function of war and evaluation."
  decision_pd_warform_transform_orange_warform_tooltip:0 "This habitat will have districts focused on war and evaluation."
+ pd_origin_init_warform_NAME: "Warform Factory System"
+ pd_origin_init_warform_DESC: "A starting system containing the Mobile Warform Factory."
 
  #Uninhabitable Modifiers
  pd_diamond:0 "Diamond World"
