--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6762,3 +6762,6 @@ snowball_earth.11.name:0 "The First Thaw"
  pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
  pd_ethane_ocean:0 "Ethane Ocean World"
  pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
+
+#Hotfixes
+ requires_not_origin_pd_warform_world: "Not Warform Origin"
