--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6591,7 +6591,7 @@ snowball_earth.11.name:0 "The First Thaw"
  d_pd_warform_war_room_desc:0 "Used for war coordination and signal-boosting drones of the machines. Its modular design suggests it has great potential for adaptation."
  #Events
  pdwarform.10.name: "Battle Wreckage"
- pdwarform.10.desc: "As [Root.GetName] entered the [Root.GetStarName] they discovered considerable battle debris and a planet destroyed by nuclear bombardment.  Above it, a space station silently orbits the entombed world. Several smaller automated ships have been broadcasting to us: flee the system immediately or face extermination."
+ pdwarform.10.desc: "As [Root.GetName] entered the [Root.GetStarName] system they discovered considerable battle debris and a planet destroyed by nuclear bombardment.  Above it, a space station silently orbits the entombed world. Several smaller automated ships have been broadcasting to us: flee the system immediately or face extermination."
  pdwarform.10.a: "Evasive Manuevers."
  pdwarform.20.name: "Battlestation"
  pdwarform.20.desc: "Scans revealed that [From.GetName] was originally a mobile factory responsible for destroying the space-faring species that inhabited this system. While its engines are beyond restoration, most systems appear repairable."
