--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6743,11 +6743,11 @@ snowball_earth.11.name:0 "The First Thaw"
 
  #Uninhabitable Modifiers
  pd_diamond:0 "Diamond World"
- pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
+ pd_diamond_desc:0 "Due to high temperatures and planetary pressure, much of this world has formed into diamonds."
  pd_carbon:0 "Carbon World"
- pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
- pd_chthonian:0 "Chthonion World"
- pd_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
+ pd_carbon_desc:0 "Unlike most silicon-oxygen compound-based worlds, it has a much higher carbon-to-oxygen ratio."
+ pd_chthonian:0 "Chthonian World"
+ pd_chthonian_desc:0 "This planet was once a gas giant, but its hydrogen and helium atmosphere was stripped away, leaving only the barren metallic core."
  pd_iron:0 "Iron World"
  pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
  pd_volcanic:0 "Volcanic World"
@@ -6757,9 +6757,9 @@ snowball_earth.11.name:0 "The First Thaw"
  pd_hot_gas_giant:0 "Hot Gas Giant World"
  pd_hot_gas_giant_desc:0 "Temperatures of this gas giant are much higher than average which causes extreme weather patterns which can be exploited for energy and rare gas collection."
  pd_cloudless_gas_giant:0 "Cloudless Gas Giant World"
- pd_cloudless_gas_giant_desc:0 "Gaseous planet with an atmosphere that does not form global cloud cover, because it lacks suitable chemicals in the atmosphere to form clouds."
+ pd_cloudless_gas_giant_desc:0 "Gaseous planet with an atmosphere that does not form global cloud cover because it lacks suitable chemicals in the atmosphere to form clouds."
  pd_cold_gas_giant:0 "Cold Gas Giant World"
- pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
+ pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average, making more stable research opportunities."
  pd_ethane_ocean:0 "Ethane Ocean World"
  pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
 
