--- a/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
@@ -6654,7 +6654,7 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
  pd_carbon:0 "Carbon World"
  pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
- pd_chthonian:0 "Chthonion World"
+ pd_chthonian:0 "Chthonian World"
  pd_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
  pd_iron:0 "Iron World"
  pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
