--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -2165,7 +2165,7 @@
  origin_tooltip_pd_hive_start_effects:0 "The hive has long turned it's homeworld into an extension of itself. Once it arrives on a any new world it will slowly infect with the hive, suffering penalties until the process is complete. \n\n§RWARNING: All planet classes are slowly transformed to §Y$pc_pdhive2$s§!" 
  origin_pd_shroud: "Shroud-Touched"
  origin_pd_shroud_desc:0 "This civilization has evolved in a world at the edge of reality and a realm of psionic energy. Living at this weak point between the two worlds has granted an abilities some would consider unnatural."
- origin_tooltip_pd_shroud_start_effects:0 "- Homeworld is a §Y$pc_pdshroud$§! (Size: £planetsize£ 30) with several §HRare Planetary Features§!.\n- Habitability preference is set to §H$trait_pc_pdshroud_preference$§!, making other types of planets undesirable.\n- Start with §Y$tech_psionic_theory$§! researched.\n- §RDoes not get any guaranteed habitable worlds.§!" 
+ origin_tooltip_pd_shroud_start_effects:0 "§R- WARNING: Blocks all Ascension Paths except for §!§HPsionic Ascension§!\n- Homeworld is a §Y$pc_pdshroud$§! (Size: £planetsize£ 30) with several §HRare Planetary Features§!.\n- Habitability preference is set to §H$trait_pc_pdshroud_preference$§!, making other types of planets undesirable.\n- Start with §Y$tech_psionic_theory$§! researched.\n- §RDoes not get any guaranteed habitable worlds.§!" 
 
  #Hive+Robot Event Updates
  pdtechnoorganic.30.d:0 "We can learn much."
