--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -1881,7 +1881,7 @@
  origin_tooltip_pd_hive_start_effects:0 "蜂群早已把它们的家园变成了自我的延伸。一旦到达任何一个新世界，蜂群就会慢慢地将其感染，在这个过程完成前遭受折磨。\n\n§R警告：所有类型的行星均会慢慢转化为§Y$pc_pdhive2$§!"
  origin_pd_shroud: "虚境所触及"
  origin_pd_shroud_desc:0 "这个文明是在现实的边缘和灵能领域世界中演化出来的。生活在两个世界之间的脆弱点，让它的人民获得了一些不同寻常的能力。"
- origin_tooltip_pd_shroud_start_effects:0 "—母星为§Y$pc_pdshroud$§!（规模：£planetsize£30），拥有几种§H罕见的行星特征§!。\n—宜居偏好固定为§H$trait_pc_pdshroud_preference$§!，因此其他星球不再宜居。\n—开局时已研发§Y$tech_psionic_theory$§!。\n—§R不会确保宜居星球。§!"
+origin_tooltip_pd_shroud_start_effects:0 "§R—警告：不能选择其他飞升途径，只能选择§!§H灵能飞升§!\n—母星为§Y$pc_pdshroud$§!（规模：£planetsize£ 30），拥有几种§H罕见的行星特征§!。\n—宜居偏好固定为§H$trait_pc_pdshroud_preference$§!，因此其他星球不再宜居。\n—开局时已研发§Y$tech_psionic_theory$§!。\n—§R不会确保宜居星球。§!"
  pdtechnoorganic.30.d:0 "我们受益匪浅。"
  pdtechnoorganic.30.d.tooltip:0 "蜂群将研究这些机械。"
  technohive:0 "合成物尸体"
