--- a/planetary_diversity/localisation/japanese/planetarydiversity_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_l_japanese.yml
@@ -6610,5 +6610,9 @@ snowball_earth.11.name:0 "The First Thaw"
  pd_ethane_ocean:0 "Ethane Ocean World"
  pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
 
+ #Hotfixes
+ requires_not_origin_pd_warform_world: "Not Warform Origin"
+ councilor_pd_first_inquisitor: "First Inquisitor"
+
  
 
