--- a/planetary_diversity/localisation/spanish/planetarydiversity_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_l_spanish.yml
@@ -6692,5 +6692,7 @@ snowball_earth.11.name:0 "El Primer Deshielo"
  pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
  pd_ethane_ocean:0 "Ethane Ocean World"
  pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
- 
 
+ #Hotfixes
+ requires_not_origin_pd_warform_world: "Not Warform Origin"
+ councilor_pd_first_inquisitor: "First Inquisitor"
