--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -6652,6 +6652,10 @@ snowball_earth.11.name:0 "The First Thaw"
  #Hotfixes
  requires_not_origin_pd_warform_world: "Not Warform Origin"
  councilor_pd_first_inquisitor: "First Inquisitor"
+ councilor_pd_first_inquisitor_female:0 "$councilor_pd_first_inquisitor$"
+ councilor_pd_first_inquisitor_desc:0 "The $TITLE$ is in charge of protecting the empire from heresy."
+ leader_trait_fourschildren: "Perfected Bio-Synth"
+ leader_trait_fourschildren_desc: "This leader is a powerful bio-synthetic, able to adapt to their role perfectly."
 
  
 
