--- a/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
@@ -6705,6 +6705,11 @@
  pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
  pd_ethane_ocean:0 "Ethane Ocean World"
  pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
+
  #Hotfixes
  requires_not_origin_pd_warform_world: "Not Warform Origin"
  councilor_pd_first_inquisitor: "First Inquisitor"
+ councilor_pd_first_inquisitor_female:0 "$councilor_pd_first_inquisitor$"
+ councilor_pd_first_inquisitor_desc:0 "The $TITLE$ is in charge of protecting the empire from heresy."
+ leader_trait_fourschildren: "Perfected Bio-Synth"
+ leader_trait_fourschildren_desc: "This leader is a powerful bio-synthetic, able to adapt to their role perfectly."
