--- a/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
@@ -5263,7 +5263,7 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  #Ammonia Origin
  origin_pd_ammonia_breathers:0 "Ammonia Rebreathers"
  origin_pd_ammonia_breathers_desc:0 "This civilization evolved on an Ammonia World with high atmospheric pressure and will need to develop environment suits and  advanced rebreathers  to thrive on other worlds."
- origin_origin_pd_ammonia_breathers_effects:0 "- Homeworld is an §H$pc_ammonia$§!.\n- Instead of using terraforming, develop technology to create increasing levels of rebreather and environment suits to colonize other worlds\n- Gain access to a special Ascension Perk to be able to terraform some §YToxic Worlds§! into §YAmmonia Worlds§"
+ origin_origin_pd_ammonia_breathers_effects:0 "- Homeworld is an §H$pc_ammonia$§!.\n- Instead of using terraforming, develop technology to create increasing levels of rebreather and environment suits to colonize other worlds"
  tech_ammonia_suits:0 "Ammonia Environment Suits"
  tech_ammonia_suits_desc:0 "While many planets have suitable temperatures, the unique atmospheric and pressure needs of our people make conventional terraforming less than useful. We will create a culture-wide system of environment suits to allow us to inhabit other worlds."
  PDAMMONIA_SUITS:0 "We will prepare a special project to enhance our citizens with environment suits."
