--- a/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
@@ -5179,7 +5179,7 @@ snowball_earth.11.name:0 "The First Thaw"
  #Ammonia Origin
  origin_pd_ammonia_breathers:0 "Ammonia Rebreathers"
  origin_pd_ammonia_breathers_desc:0 "This civilization evolved on an Ammonia World with high atmospheric pressure and will need to develop environment suits and  advanced rebreathers  to thrive on other worlds."
- origin_origin_pd_ammonia_breathers_effects:0 "- Homeworld is an §H$pc_ammonia$§!.\n- Instead of using terraforming, develop technology to create increasing levels of rebreather and environment suits to colonize other worlds\n- Gain access to a special Ascension Perk to be able to terraform some §YToxic Worlds§! into §YAmmonia Worlds§"
+ origin_origin_pd_ammonia_breathers_effects:0 "- Homeworld is an §H$pc_ammonia$§!.\n- Instead of using terraforming, develop technology to create increasing levels of rebreather and environment suits to colonize other worlds"
  tech_ammonia_suits:0 "Ammonia Environment Suits"
  tech_ammonia_suits_desc:0 "While many planets have suitable temperatures, the unique atmospheric and pressure needs of our people make conventional terraforming less than useful. We will create a culture-wide system of environment suits to allow us to inhabit other worlds."
  PDAMMONIA_SUITS:0 "We will prepare a special project to enhance our citizens with environment suits."
@@ -6703,7 +6703,7 @@ snowball_earth.11.name:0 "The First Thaw"
  pd_warform_nearby_init_NAME: "MWF-14 Neighbor"
  pd_warform_nearby_init_DESC:0 "One of your Neighbor systems will have MWF-14. It will not spawn again in the game."
  d_remaining_stores_warform:0 "Left Over Supplies"
- d_remaining_stores_warform_desc:0 "The reaming Nuti-paste and mineral supplies left behind by the machines will last a few hundred years at least."
+ d_remaining_stores_warform_desc:0 "The remaining Nutri-paste and mineral supplies left behind by the machines will last a few hundred years at least."
  START_SCREEN_PD_WARFORM_CYBORG: "For us, it was a few years ago.\n\nThe machines were slowly destroying every system with organic life forms, and we believed our defenses were ready for the coming onslaught. Survivors were rounded up and relocated to this station, used as test subjects in horrific experiments, and placed into hibernation pods.\n\nOnce awake, we found our captors gone, and thousands of years had passed..\n\nUnable to return to our ruined homeworld, we have repaired the station to be livable and have hobbled together the needed knowledge to return to the stars.\n\nThe scar of the cybernetics experiments is now a permanent part of us."
  building_pd_warform_cyber_lab: "Cyber-Laboratory"
  building_pd_warform_cyber_lab_desc: "This laboratory expands on the cybernetic experiments done on the Warform Factory world."
