--- a/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
@@ -3581,7 +3581,7 @@
  building_senate_building:0 "Grand Legislative Hall"
  building_senate_building_desc:0 "This immense legislative complex has become the main chamber of our government and the dedicated security team that guards them."
  building_grand_boardroom:0 "Grand Boardroom"
- building_grand_boardroom_desc:0 "This giant and lavish Boardroom has become the main place for meetings of the highest executives of our corporation and the home of the dedicated security team that guard them."
+ building_grand_boardroom_desc:0 "This giant and lavish Boardroom has become the main place for meetings of the highest executives of our corporation and the home of the dedicated security team that guards them."
 
  palacearcnotcapital_desc:0 "This building was designed to be near the capital, meaning much of the efficiency and usefulness of it's design is currently being wasted. The large fortress still holds some military value."
  capitalarcnotwrongauth_desc:0 "This building was set up for a completely different type of government, while it still holds some military value it might be better to use the foundation to rebuild it into something that suits our government better."
@@ -4893,7 +4893,7 @@ snowball_earth.11.name:0 "The First Thaw"
  mod_job_palace_guard_per_pop:0 "§G+1§! $job_palace_guard$ Job per $VALUE$ Pops"
  mod_job_palace_guard_per_pop_short:0 "\n§G+1§! £mod_job_palace_guard_add£ per $VALUE$ £pop£"
  d_pd_boardroom_arc:0 "Grand Boardroom"
- d_pd_boardroom_arc_desc:0 "This giant and lavish Boardroom has become the main place for meetings of the highest executives of our corporation and the home of the dedicated security team that guard them."
+ d_pd_boardroom_arc_desc:0 "This giant and lavish Boardroom has become the main place for meetings of the highest executives of our corporation and the home of the dedicated security team that guards them."
  decision_palace_arc:0 "Build Grand Palace-Fortress"
  decision_palace_arc_desc:0 "The needs of our ever growing government require us to dedicate a large amount of this arcology to our administration and security."
  decision_palace_arc_effects:0 "Add the Grand Palace-Fortress to this capital, taking up some district space and gaining a specialized capital in return."
@@ -4901,7 +4901,7 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_remove_palace_arc_desc:0 "This fortress is useless to us and must be destroyed to make better use of the space."
  decision_remove_palace_arc_effects:0 "This will remove the useless Grand Palace-Fortress"
  decision_boardroom_arc:0 "Build Grand Boardroom"
- decision_boardroom_arc_desc:0 "This giant and lavish Boardroom will become the main place for meetings of the highest executives of our corporation and the home of the dedicated security team that guard them."
+ decision_boardroom_arc_desc:0 "This giant and lavish Boardroom will become the main place for meetings of the highest executives of our corporation and the home of the dedicated security team that guards them."
  decision_boardroom_arc_effects:0 "Add the Grand Boardroom to this capital, taking up some district space and gaining a specialized capital in return."
  decision_remove_boardroom_arc:0 "Remove Grand Boardroom"
  decision_remove_boardroom_arc_desc:0 "This boardroom is useless to us and must be destroyed to make better use of the space."
