--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6416,8 +6416,8 @@ snowball_earth.11.name:0 "The First Thaw"
  pc_aquatic_cave:0 "Aquatic Cavern World"
  pc_aquatic_cave_desc:0 "A rocky cavern world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Much of the surface of this world is barren rock but the caverns below house a planet wide underground ocean."
  pc_aquatic_cave_adj:0 "aquatic"
- mod_pc_aquatic_cave_habitability:0 "Aquatic Superhabitable Habitability"
- trait_pc_aquatic_cave_preference:0 "Aquatic Superhabitable Preference"
+ mod_pc_aquatic_cave_habitability:0 "Aquatic Cavern Habitability"
+ trait_pc_aquatic_cave_preference:0 "Aquatic Cavern Preference"
  trait_pc_aquatic_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  pc_machine_cave:0 "Machine Cavern World"
  pc_machine_cave_desc:0 "Rocky cavern world filled with artificial structures. The thin atmosphere consists mostly of industrial pollutants and is not capable of supporting biological life."
