--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6771,3 +6771,6 @@ snowball_earth.11.name:0 "The First Thaw"
  leader_trait_fourschildren: "Perfected Bio-Synth"
  leader_trait_fourschildren_desc: "This leader is a powerful bio-synthetic, able to adapt to their role perfectly."
 
+ #3.9 Fixes
+ d_hycean_flooded_habitat: "Hycean Research Center"
+ d_hycean_flooded_habitat_desc: "This station has long been a center of research, astrological studies, and the launching pad for space-based exploration projects."
