--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -14,3 +14,9 @@
 
 
 #Planets
+ pc_pd_megaflora_hive:0 "Megaflora Hive World"
+ pc_pd_megaflora_hive_desc:0 "Rocky world with a nitrogen-oxygen atmosphere, densely forested with a strong and healthy hydro-sphere. This planet is home to a megaflora tree covering its surface, psionically connected with the Hive Mind that nurtures it."
+ trait_pc_pd_megaflora_hive_preference:0 "Megaflora Hivea Preference"
+ trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+ pc_pd_megaflora_hive_habitability:0 "Megaflora Hive Habitability"
+ mod_pc_pd_megaflora_hive_habitability:0 "Megaflora Hive Habitability"
