--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -11,12 +11,29 @@
  concept_pd_aw_tree_of_life_desc: "- $MOD_POP_GROWTH_SPEED$: §G+15%§!\n- $mod_planet_jobs_society_research_produces_mult$: §G+10%§!\n- $MOD_PLANET_HOUSING_ADD$: §G+10§!\n- $mod_district_farming_max$: §G+4§!\n- Upkeep: 4 $i_food$\n\n§L$d_tree_of_life_home_desc$§!"
 
 #Deposits
+ d_pd_tree_of_life_home:0 "Tree of Life"
+ d_pd_tree_of_life_home_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations."
+ d_pd_tree_of_life_colony:0 "Tree of Life Sapling"
+ d_pd_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to fully mature."
+ d_pd_tree_of_life_bloomed:0 "Bloomed Tree of Life"
+ d_pd_tree_of_life_bloomed_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations. Now in bloom, its beneficial effects can be felt by every drone."
 
 
 #Planets
  pc_pd_megaflora_hive:0 "Megaflora Hive World"
  pc_pd_megaflora_hive_desc:0 "Rocky world with a nitrogen-oxygen atmosphere, densely forested with a strong and healthy hydro-sphere. This planet is home to a megaflora tree covering its surface, psionically connected with the Hive Mind that nurtures it."
- trait_pc_pd_megaflora_hive_preference:0 "Megaflora Hivea Preference"
+ trait_pc_pd_megaflora_hive_preference:0 "Megaflora Hive Preference"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
  pc_pd_megaflora_hive_habitability:0 "Megaflora Hive Habitability"
  mod_pc_pd_megaflora_hive_habitability:0 "Megaflora Hive Habitability"
+ pc_pd_megaflora_hive_bloomed:0 "Megaflora Hive World"
+ pc_pd_megaflora_hive_bloomed_desc:0 "Rocky world with a nitrogen-oxygen atmosphere, densely forested with a strong and healthy hydro-sphere. This planet is home to a megaflora tree covering its surface, psionically connected with the Hive Mind that nurtures it."
+ trait_pc_pd_megaflora_hive_bloomed_preference:0 "Megaflora Hive Preference"
+ trait_pc_pd_megaflora_hive_bloomed_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+ pc_pd_megaflora_hive_bloomed_habitability:0 "Megaflora Hive Habitability"
+ mod_pc_pd_megaflora_hive_bloomed_habitability:0 "Megaflora Hive Habitability"
+
+#Districts
+ district_megaflora_hive: "Megaflora Root District"
+ district_megaflora_hive_plural:0 "egaflora Root Districts"
+ district_megaflora_hive_desc: "These towering root structures are where the drones gather when not working to rejuvenate and consume nutrients."
